14: Change the search suggestion algorithm